onload function supplemented

--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,8 @@
     <!-- <button id="changeColor"></button> -->
     <table id = "seriesTable">
     </table>
+    <script src="pluginUtilities.js"></script>
     <script src="popup.js"></script>
+
   </body>
 </html>
