--- a/popup.html
+++ b/popup.html
@@ -3,86 +3,61 @@
 
 <head>
   <style>
-    button {
-      text-decoration: none;
-      text-align: center;
-      padding: 6px 11px;
-      border: none;
-      -webkit-border-radius: 10px;
-      -moz-border-radius: 10px;
-      border-radius: 10px;
-      font: 13px Arial, Helvetica, sans-serif;
-      font-weight: bold;
-      color: #f7f7f7;
-      background-color: #d4397c;
-      background-image: -moz-linear-gradient(top, #d4397c 0%, #db1c1c 100%);
-      background-image: -webkit-linear-gradient(top, #d4397c 0%, #db1c1c 100%);
-      background-image: -o-linear-gradient(top, #d4397c 0%, #db1c1c 100%);
-      background-image: -ms-linear-gradient(top, #d4397c 0%, #db1c1c 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#db1c1c', endColorstr='#db1c1c', GradientType=0);
-      background-image: linear-gradient(top, #d4397c 0%, #db1c1c 100%);
-      -webkit-box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
-      -moz-box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
-      box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
-      opacity: 0.69;
-      -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=69);
-      filter: alpha(opacity=69);
+    .remove {
+      
+      opacity: 0.3;
+      margin-right: 25px;
     }
 
-    button:hover {
-      padding: 6px 11px;
-      border: none;
-      -webkit-border-radius: 10px;
-      -moz-border-radius: 10px;
-      border-radius: 10px;
-      font: 13px Arial, Helvetica, sans-serif;
-      font-weight: bold;
-      color: #f7f7f7;
-      background-color: #d43939;
-      background-image: -moz-linear-gradient(top, #d43939 0%, #db1c1c 100%);
-      background-image: -webkit-linear-gradient(top, #d43939 0%, #db1c1c 100%);
-      background-image: -o-linear-gradient(top, #d43939 0%, #db1c1c 100%);
-      background-image: -ms-linear-gradient(top, #d43939 0%, #db1c1c 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#db1c1c', endColorstr='#db1c1c', GradientType=0);
-      background-image: linear-gradient(top, #d43939 0%, #db1c1c 100%);
-      -webkit-box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
-      -moz-box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
-      box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
-
+    .remove:hover {
+      opacity: 1;
     }
 
-    button:active {
-      padding: 6px 11px;
-      border: none;
-      -webkit-border-radius: 10px;
-      -moz-border-radius: 10px;
-      border-radius: 10px;
-      font: 13px Arial, Helvetica, sans-serif;
-      font-weight: bold;
-      color: #f7f7f7;
-      background-color: #d9d9d9;
-      background-image: -moz-linear-gradient(top, #d9d9d9 0%, #8f8f8f 100%);
-      background-image: -webkit-linear-gradient(top, #d9d9d9 0%, #8f8f8f 100%);
-      background-image: -o-linear-gradient(top, #d9d9d9 0%, #8f8f8f 100%);
-      background-image: -ms-linear-gradient(top, #d9d9d9 0%, #8f8f8f 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8f8f8f', endColorstr='#8f8f8f', GradientType=0);
-      background-image: linear-gradient(top, #d9d9d9 0%, #8f8f8f 100%);
-      -webkit-box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
-      -moz-box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
-      box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
-      opacity: 0.69;
-      -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=69);
-      filter: alpha(opacity=69);
+    .remove:before,
+    .remove:after {
+      position: absolute;
+      right: 25px;
+      content: ' ';
+      height: 18px;
+      width: 4px;
+      background-color: #333;
+    }
+
+    .remove:before {
+      transform: rotate(45deg);
+    }
+
+    .remove:after {
+      transform: rotate(-45deg);
     }
 
     table {
       height: 90px;
-      width: 300px;
+      width: 360px;
       outline: none;
-      background: rgb(243, 208, 210);
-      border: #ffbcbc;
       color: #554baa;
+      font-weight: normal;
+      border-spacing: 8px;
+    }
+
+    .name {
+      font-size: 14px;
       font-weight: bold;
+    }
+    .episode{
+      text-align: right;
+    }
+
+    div.new {
+      display: inline-block;
+      color: #ffffff;
+      background-color: rgb(255, 0, 0);
+      border-radius: 10px;
+      padding: 4px;
+      font-size: 80%;
+      text-align: right;
+      transform: rotate(-20deg);
+      opacity: 0.69;
     }
   </style>
 </head>
